[package]
name = "songxinran"
version = "0.1.0"
authors = ["henzai <ry0chord@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-compact = "0.1.9"
hex = "0.4.3"
http = "0.2.4"
hyper = { version = "0.14.7", features = ["full"] }
serde =  { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
tokio = { version = "1.6.0", features = ["full"] }
